Tried to fix the html and css structure, but got stuck.

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -10,3 +10,10 @@ pre {
     overflow-x: auto;
     font-family: "Monaco", monospace;
 }
+
+
+@media (min-width: 768px) {
+    h1 {
+        margin-top: 60px;
+    }
+}
